@@ -20,12 +20,11 @@
 #ifdef REFCLOCK
 
 #ifdef TTYCLK
-#ifdef TTYCLK_AIOCTIMESTAMP
-# include <sys/sio.h>
-# define TIOCDCDTIMESTAMP	AIOCTIMESTAMPTV
-#else
-# include <sys/clkdefs.h>
-#endif
+# ifdef SCO5_CLOCK
+#  include <sys/sio.h>
+# else
+#  include <sys/clkdefs.h>
+# endif
 #endif /* TTYCLK */
 
 #ifdef HAVE_PPSCLOCK_H
@@ -831,7 +830,7 @@ refclock_open(
 		ttyp->c_lflag = 0;
 		ttyp->c_cc[VMIN] = 1;
 	}
-#if defined(TIOCMGET) && !defined(TTYCLK_AIOCTIMESTAMP)
+#if defined(TIOCMGET) && !defined(SCO5_CLOCK)
 	/*
 	 * If we have modem control, check to see if modem leads are
 	 * active; if so, set remote connection. This is necessary for
@@ -1027,7 +1026,7 @@ refclock_ioctl(
 	 * The following features may or may not require System V
 	 * STREAMS support, depending on the particular implementation.
 	 */
-#if defined(TTYCLK) && !defined(TTYCLK_AIOCTIMESTAMP)
+#if defined(TTYCLK)
 	/*
 	 * The TTYCLK option provides timestamping at the driver level.
 	 * It requires the tty_clk streams module and System V STREAMS
@@ -1048,25 +1047,17 @@ refclock_ioctl(
 				str = "*";
 			else
 				str = "\n";
+#ifdef CLK_SETSTR
 			if ((rval = ioctl(fd, CLK_SETSTR, str)) < 0)
 				msyslog(LOG_ERR,
 				    "refclock_ioctl: CLK_SETSTR failed: %m");
 			if (debug)
 				printf("refclock_ioctl: fd %d CLK_SETSTR %d str %s\n",
 				    fd, rval, str);
+#endif
 		}
 	}
-#endif /* TTYCLK and !TTYCLK_AIOCTIMESTAMP */
-#ifdef TTYCLK_AIOCTIMESTAMP
-	/*
-	 * The TTYCLK_AIOCTIMESTAMP option provides timestamping at the
-	 * driver level. It requires the AIOCTIMESTAMPCTL and
-	 * AIOCTIMESTAMPTV ioctls.
-	 */
-	if (ioctl(fd, AIOCTIMESTAMPCTL, 1) < 0)
-		msyslog(LOG_ERR,
-		    "refclock_ioctl: AIOCTIMESTAMPCTL failed: %m");
-#endif /* TTYCLK_AIOCTIMESTAMP */
+#endif /* TTYCLK */
 
 #if defined(PPS) && !defined(HAVE_PPSAPI)
 	/*
